--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header id="home">
+    <header id="homee">
         <nav class="navbar navbar-expand-lg bg-headerku fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
